Bulding header and introduction

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -66,6 +66,35 @@
     </article>
   </section>
 
+  <section class="introduction">
+    <article class="introduction__layout container">
+      <header class="header">
+        <a href="#top"><img src="//placehold.it/200x50" alt="Web Developer" class="header__logo"></a>
+
+        <button class="toggle">
+          <span class="toggle__line"></span>
+        </button>
+
+        <nav class="navigation">
+          <ul class="navigation__list">
+            <li class="navigation__item"><a href="#work" class="navigation__link navigation__link--active">Work</a></li>
+            <li class="navigation__item"><a href="#skills" class="navigation__link">Skills</a>
+            </li>
+            <li class="navigation__item"><a href="#contact"
+                class="navigation__link navigation__link--featured">Contact</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+
+      <article class="introduction__content">
+        <h1 class="introduction__title">Web Developer</h1>
+        <p class="introduction__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit quae quidem
+          laboriosam fugit commodi consequuntur veritatis nulla suscipit.</p>
+        <a href="#work" class="button">View my Work</a>
+      </article>
+    </article>
+  </section>
 
 
   <!-- Scripts start. -->
