--- a/public/src/index.html
+++ b/public/src/index.html
@@ -96,6 +96,44 @@
     </article>
   </section>
 
+  <section class="projects section container container--extra-large" id="work">
+    <article class="project">
+      <a href="#!" class="project__link">
+        <figure>
+          <img src="//placehold.it/700x700" alt="Web Developer" class="project__preview">
+        </figure>
+      </a>
+    </article>
+
+    <article class="project">
+      <a href="#!" class="project__link">
+        <figure>
+          <img src="//placehold.it/700x700" alt="Web Developer" class="project__preview">
+        </figure>
+      </a>
+    </article>
+
+    <article class="project">
+      <a href="#!" class="project__link">
+        <figure>
+          <img src="//placehold.it/700x700" alt="Web Developer" class="project__preview">
+        </figure>
+      </a>
+    </article>
+
+    <article class="project">
+      <a href="#!" class="project__link">
+        <figure>
+          <img src="//placehold.it/700x700" alt="Web Developer" class="project__preview">
+        </figure>
+      </a>
+    </article>
+  </section>
+
+  <section class="section section--blue">
+    <h1>Test</h1>
+  </section>
+
 
   <!-- Scripts start. -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"
