Adding Expertise and Contact section

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -95,7 +95,7 @@
       </article>
     </article>
   </section>
-
+  <!-- 
   <section class="projects section container container--extra-large" id="work">
     <article class="project">
       <a href="#!" class="project__link">
@@ -128,10 +128,71 @@
         </figure>
       </a>
     </article>
+  </section> -->
+
+  <section class="skills section">
+    <article class="skills__inner container">
+      <h2 class="skills__title">Expertise</h2>
+
+      <article class="skills__layout">
+        <article class="skill">
+          <h3 class="skill__title">Website Development</h3>
+          <p class="skill__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, qui!</p>
+        </article>
+
+        <article class="skill">
+          <h3 class="skill__title">Website Development</h3>
+          <p class="skill__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, qui!</p>
+        </article>
+
+        <article class="skill">
+          <h3 class="skill__title">Website Development</h3>
+          <p class="skill__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, qui!</p>
+        </article>
+
+        <article class="skill">
+          <h3 class="skill__title">Website Development</h3>
+          <p class="skill__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, qui!</p>
+        </article>
+      </article>
+    </article>
   </section>
 
-  <section class="section section--blue">
-    <h1>Test</h1>
+  <section class="content section container">
+    <figure>
+      <img src="./assets/images/illustrations/graph.svg" alt="Web Developer" class="content__image">
+    </figure>
+    <article>
+      <h2 class="content__title">Lorem ipsum dolor sit amet</h2>
+      <p class="content__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium eligendi, porro aut
+        repudiandae dolor, dolore sequi nisi magni eveniet consequatur officiis perferendis aliquam autem fuga.</p>
+    </article>
+  </section>
+
+  <section class="content content--reverse section section--no-top container">
+    <figure class="content__illustration">
+      <img src="./assets/images/illustrations/message.svg" alt="Web Developer" class="content__image">
+    </figure>
+    <article class="content__content">
+      <h2 class="content__title">Lorem ipsum dolor sit amet</h2>
+      <p class="content__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium eligendi, porro aut
+        repudiandae dolor, dolore sequi nisi magni eveniet consequatur officiis perferendis aliquam autem fuga.</p>
+    </article>
+  </section>
+
+  <section class="contact section container">
+    <article>
+      <h2 class="contact__title">Contact</h2>
+      <p class="contact__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem beatae, delectus
+        qui recusandae sed, id et natus ratione voluptatibus eaque possimus alias, accusantium excepturi? Libero.</p>
+    </article>
+
+    <form action="#!" class="form">
+      <input type="text" name="name" placeholder="Name" class="form__input" required>
+      <input type="email" name="email" placeholder="Email" class="form__input" required>
+      <textarea name="enquiry" class="form__input form__input--text" placeholder="Enquiry"></textarea>
+      <button class="button" type="submit">Send</button>
+    </form>
   </section>
 
 
