--- a/public/src/index.html
+++ b/public/src/index.html
@@ -196,6 +196,12 @@
   </section>
 
 
+  <footer class="footer">
+    <section class="footer__layout container">
+      <a href="#top"><img src="//placehold.it/200x50" alt="Web Developer" class="footer__logo"></a>
+    </section>
+  </footer>
+
   <!-- Scripts start. -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"
