--- a/public/src/index.html
+++ b/public/src/index.html
@@ -78,13 +78,13 @@
         <ul class="navigation__list">
           <li class="navigation__item"><a href="#skills" class="navigation__link navigation__link--active">Skills</a>
           <li class="navigation__item"><a href="#work" class="navigation__link">Work</a></li>
-          <li class="navigation__item"><a href="#skills" class="navigation__link">Blog</a>
-          </li>
+          <li class="navigation__item"><a href="#skills" class="navigation__link">Blog</a></li>
         </ul>
+        <a href="#contact" class="header__button header__button--small button">Contact</a>
       </nav>
 
       <article class="header__item header__item--right">
-        <a href="#contact" class="header__button button">Contact</a>
+        <a href="#contact" class="header__button header__button--large button">Contact</a>
       </article>
     </section>
   </header>
