--- a/public/src/index.html
+++ b/public/src/index.html
@@ -2,24 +2,22 @@
 <html lang="en">
 
 <head>
-  <title>Web Developer - Bespoke Websites | Louis Young</title>
-  <meta name="theme-color" content="#3460f1">
+  <title>Web Developer - Bespoke Website Development | Louis Young</title>
+  <meta name="theme-color" content="#4156d0">
   <!-- SEO start. -->
-  <meta name="description" content="">
-  <meta name="robots" content="">
-  <link rel="canonical" href="">
-  <meta property="og:site_name" content="">
-  <meta property="og:title" content="">
-  <meta property="og:url" content="">
-  <meta property="og:description" content="">
-  <meta property="og:type" content="">
-  <meta property="og:image" content="">
-  <meta name="twitter:card" content="">
-  <meta name="twitter:site" content="">
-  <meta name="twitter:title" content="">
-  <meta name="twitter:url" content="">
-  <meta name="twitter:description" content="">
-  <meta name="twitter:image" content="">
+  <meta name="description"
+    content="An experienced web developer creating clean, modern, responsive, scalable and performant websites and applications to help benefit businesses.">
+  <link rel="canonical" href="https://www.louisyoung.co.uk">
+  <meta property="og:site_name" content="Web Developer - Bespoke Website Development | Louis Young">
+  <meta property="og:title" content="Louis Young - Web Developer">
+  <meta property="og:url" content="https://www.louisyoung.co.uk">
+  <meta property="og:description"
+    content="An experienced web developer creating clean, modern, responsive, scalable and performant websites and applications to help benefit businesses.">
+  <meta name="twitter:site" content="https://www.louisyoung.co.uk">
+  <meta name="twitter:title" content="Louis Young - Web Developer">
+  <meta name="twitter:url" content="https://www.louisyoung.co.uk">
+  <meta name="twitter:description"
+    content="An experienced web developer creating clean, modern, responsive, scalable and performant websites and applications to help benefit businesses.">
   <!-- SEO end. -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -35,11 +33,200 @@
 
 <body>
 
+  <header class="header">
+    <section class="header__layout container">
+      <article class="header__item header__item--left">
+        <a href="#top" class="logo"><span class="logo__text logo__text--dark">Louis</span> <span
+            class="logo__text logo__text--light">Young</span></a>
+      </article>
+
+      <article class="header__item header__item--toggle">
+        <button class="toggle">
+          <span class="toggle__line"></span>
+        </button>
+      </article>
+
+      <nav class="navigation">
+        <ul class="navigation__list">
+          <li class="navigation__item"><a href="#skills" class="navigation__link navigation__link--active">Skills</a>
+          <li class="navigation__item"><a href="#work" class="navigation__link">Work</a></li>
+          <li class="navigation__item"><a href="#me" class="navigation__link">Me</a></li>
+        </ul>
+        <a href="#contact" class="header__button header__button--small button">Contact</a>
+      </nav>
+
+      <article class="header__item header__item--right">
+        <a href="#contact" class="header__button header__button--large button">Contact</a>
+      </article>
+    </section>
+  </header>
+
+  <main>
+    <section class="introduction">
+      <article class="introduction__layout container" data-aos="zoom-in-up" data-aos-duration="2000">
+        <article class="introduction__content">
+          <h1 class="introduction__title">Web Developer</h1>
+          <p class="introduction__content">Currently developing clean, modern, responsive, scalable and performant
+            websites and
+            applications at <a href="//fluidstudiosltd.com" target="_blank" rel="noopener nofollow" class="link">Fluid
+              Studios</a> to help benefit businesses.
+          </p>
+          <a href="#work" class="button">See my Work</a>
+        </article>
+        <img src="./assets/images/illustrations/proud.svg" alt="Web Developer" class="introduction__illustration">
+      </article>
+    </section>
+
+    <hr class="anchor" id="skills">
+
+    <hr class="separator">
+
+    <section class="skills section section--first" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="500">
+      <article class="skills__inner container">
+        <h2 class="skills__title">Expertise</h2>
+
+        <article class="skills__layout">
+          <article class="skill">
+            <h3 class="skill__title">Performance</h3>
+            <p class="skill__text">Time is of the essence, so having a lightning fast website or application is vital to
+              success.</p>
+          </article>
+
+          <article class="skill">
+            <h3 class="skill__title">Efficiency</h3>
+            <p class="skill__text">Making optimal use of my time and being efficient when working is key.</p>
+          </article>
+
+          <article class="skill">
+            <h3 class="skill__title">Responsiveness</h3>
+            <p class="skill__text">Every website and application needs to look great on every device, regardless of
+              size.</p>
+          </article>
+
+          <article class="skill">
+            <h3 class="skill__title">Code</h3>
+            <p class="skill__text">Writing clean, scalable and modular code is of the highest importance.
+            </p>
+          </article>
+        </article>
+      </article>
+    </section>
+
+    <hr class="anchor" id="work">
+
+    <hr class="separator">
+
+    <section class="projects section container" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="500">
+      <article class="project">
+        <a href="#!" class="project__link">
+          <video autoplay muted loop playsinline loading="lazy" class="project__preview"
+            src="https://danielkorpai.com/dist/img/dribbble/finder-for-ipad-concept-full.mp4"></video>
+        </a>
+      </article>
+      <article class="project">
+        <a href="#!" class="project__link">
+          <video autoplay muted loop playsinline loading="lazy" class="project__preview"
+            src="https://danielkorpai.com/dist/img/dribbble/finder-for-ipad-pro-multitasking.mp4"></video>
+        </a>
+      </article>
+      <article class="project">
+        <a href="#!" class="project__link">
+          <img loading="lazy" src="https://danielkorpai.com/dist/img/dribbble/landing-page-template.png"
+            alt="Web Developer" class="project__preview">
+        </a>
+      </article>
+      <article class="project">
+        <a href="#!" class="project__link">
+          <video autoplay muted loop playsinline loading="lazy" class="project__preview"
+            src="https://danielkorpai.com/dist/img/dribbble/photography-portfolio-concept.mp4"></video>
+        </a>
+      </article>
+    </section>
+
+    <hr class="anchor" id="me">
+
+    <hr class="separator">
+
+    <section class="content section container" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="1000">
+      <figure>
+        <img src="./assets/images/illustrations/usability.svg" alt="Web Developer" class="content__image"
+          loading="lazy">
+      </figure>
+      <article class="content__content">
+        <h2 class="content__title">Technologies</h2>
+        <p class="content__text">I specialise in creating performant, responsive and accessible websites and
+          applications. </p>
+        <p class="content__text">Technologies and I'm comfortable working with include but are not limited to HTML5,
+          CSS3, Sass,
+          JavaScript, React, PHP, MySQL, Docker, NPM, Git, Gulp, Webpack, and the ability to learn others.</p>
+      </article>
+    </section>
+
+    <section class="content content--reverse section container" data-aos="fade-up" data-aos-duration="2000"
+      data-aos-offset="1000">
+      <figure class="content__illustration">
+        <img src="./assets/images/illustrations/startup.svg" alt="Web Developer" class="content__image" loading="lazy">
+      </figure>
+      <article class="content__content">
+        <h2 class="content__title">Experience</h2>
+        <p class="content__text">I have experience working as an industry professional and am an excellent communicator
+          capable of working in teams
+          with knowledge of Windows
+          and Linux, FTP, SSH, servers, hosting, domains, DNS and APIs.</p>
+        <p class="content__text">I am also practiced using industry leading applications such as Slack, Asana,
+          1Password, Adobe XD, Visual
+          Studio Code, Postman and more.</p>
+      </article>
+    </section>
+
+    <hr class="anchor" id="contact">
+
+    <hr class="separator">
+
+    <section class="contact container section section--last" data-aos="fade-up" data-aos-duration="2000"
+      data-aos-offset="1000">
+      <article>
+        <h2 class="contact__title">Let's talk</h2>
+        <p class="contact__text">If you have an idea for a project or you just want to have a chat, please feel free to
+          get in touch with me to see how I can benefit your business.</p>
+        <p class="contact__text">I'm always open to new opportunities, so if you would like to find about more about me
+          in a professional capacity, please get in touch via any of the methods on my website. Alternatively, send me
+          an email at <a href="mailto:me@louisyoung.co.uk" class="link">me@louisyoung.co.uk</a>.</p>
+      </article>
+
+      <form action="#!" class="form">
+        <input type="text" name="name" placeholder="Name" class="form__input" required>
+        <input type="email" name="email" placeholder="Email" class="form__input" required>
+        <textarea name="enquiry" class="form__input form__input--text" placeholder="Enquiry"></textarea>
+        <button class="button" type="submit">Send</button>
+      </form>
+    </section>
+
+  </main>
+
+  <footer class="footer">
+    <section class="footer__layout container">
+      <article>
+        <a href="#top" class="logo"><span class="logo__text logo__text--dark">Louis</span> <span
+            class="logo__text logo__text--light">Young</span></a>
+      </article>
+      <article class="socials">
+        <a href="//github.com/louis-young"><img src="./assets/images/icons/socials/github.svg" alt="Github"
+            class="socials__icon"></a>
+        <a href="//twitter.com/louisryoungg"><img src="./assets/images/icons/socials/twitter.svg" alt="Twitter"
+            class="socials__icon"></a>
+        <a href="//linkedin.com/in/louis-r-young"><img src="./assets/images/icons/socials/linkedin.svg" alt="LinkedIn"
+            class="socials__icon"></a>
+      </article>
+    </section>
+  </footer>
+
   <section class="fallback">
     <article class="fallback__content container">
       <a href="/" class="fallback__logo">
         <figure>
-          <img src="./assets/images/logo/logo.svg" alt="Website" class="menu__logo">
+          <a href="#top" class="logo"><span class="logo__text logo__text--dark">Louis</span> <span
+              class="logo__text logo__text--light">Young</span></a>
         </figure>
       </a>
 
@@ -62,158 +249,6 @@
       </div>
     </article>
   </section>
-
-  <header class="header">
-    <section class="header__layout container">
-      <a href="#top" class="logo"><span class="logo__text logo__text--dark">Louis</span> <span
-          class="logo__text logo__text--light">Young</span></a>
-
-      <article class="header__item header__item--toggle">
-        <button class="toggle">
-          <span class="toggle__line"></span>
-        </button>
-      </article>
-
-      <nav class="navigation">
-        <ul class="navigation__list">
-          <li class="navigation__item"><a href="#skills" class="navigation__link navigation__link--active">Skills</a>
-          <li class="navigation__item"><a href="#work" class="navigation__link">Work</a></li>
-          <li class="navigation__item"><a href="#skills" class="navigation__link">Blog</a></li>
-        </ul>
-        <a href="#contact" class="header__button header__button--small button">Contact</a>
-      </nav>
-
-      <article class="header__item header__item--right">
-        <a href="#contact" class="header__button header__button--large button">Contact</a>
-      </article>
-    </section>
-  </header>
-
-  <section class="introduction">
-    <article class="introduction__layout container" data-aos="fade-up" data-aos-duration="1500">
-      <article class="introduction__content" data-aos="fade-up" data-aos-duration="1500">
-        <h1 class="introduction__title">Web Developer</h1>
-        <p class="introduction__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit quae quidem
-          laboriosam fugit commodi consequuntur veritatis nulla suscipit.</p>
-        <a href="#work" class="button">View my Work</a>
-      </article>
-      <img src="./assets/images/illustrations/mockup.svg" alt="Web Developer" class="introduction__illustration">
-    </article>
-  </section>
-
-  <section class="skills section section--first" id="skills" data-aos="fade-up" data-aos-duration="1000"
-    data-aos-offset="500">
-    <article class="skills__inner container">
-      <h2 class="skills__title">Expertise</h2>
-
-      <article class="skills__layout">
-        <article class="skill">
-          <h3 class="skill__title">Website Development</h3>
-          <p class="skill__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, qui!</p>
-        </article>
-
-        <article class="skill">
-          <h3 class="skill__title">Website Development</h3>
-          <p class="skill__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, qui!</p>
-        </article>
-
-        <article class="skill">
-          <h3 class="skill__title">Website Development</h3>
-          <p class="skill__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, qui!</p>
-        </article>
-
-        <article class="skill">
-          <h3 class="skill__title">Website Development</h3>
-          <p class="skill__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, qui!</p>
-        </article>
-      </article>
-    </article>
-  </section>
-
-  <section class="projects section container" id="work" data-aos="fade-up" data-aos-duration="1000"
-    data-aos-offset="500">
-    <article class="project">
-      <a href="#!" class="project__link">
-        <video autoplay muted loop playsinline loading="lazy" class="project__preview"
-          src="https://danielkorpai.com/dist/img/dribbble/finder-for-ipad-concept-full.mp4"></video>
-      </a>
-    </article>
-    <article class="project">
-      <a href="#!" class="project__link">
-        <video autoplay muted loop playsinline loading="lazy" class="project__preview"
-          src="https://danielkorpai.com/dist/img/dribbble/finder-for-ipad-pro-multitasking.mp4"></video>
-      </a>
-    </article>
-    <article class="project">
-      <a href="#!" class="project__link">
-        <img loading="lazy" src="https://danielkorpai.com/dist/img/dribbble/landing-page-template.png"
-          alt="Web Developer" class="project__preview">
-      </a>
-    </article>
-    <article class="project">
-      <a href="#!" class="project__link">
-        <video autoplay muted loop playsinline loading="lazy" class="project__preview"
-          src="https://danielkorpai.com/dist/img/dribbble/photography-portfolio-concept.mp4"></video>
-      </a>
-    </article>
-  </section>
-
-  <section class="content section container" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="500">
-    <figure>
-      <img src="./assets/images/illustrations/graph.svg" alt="Web Developer" class="content__image" loading="lazy">
-    </figure>
-    <article>
-      <h2 class="content__title">Lorem ipsum dolor sit amet</h2>
-      <p class="content__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium eligendi, porro aut
-        repudiandae dolor, dolore sequi nisi magni eveniet consequatur officiis perferendis aliquam autem fuga.</p>
-    </article>
-  </section>
-
-  <section class="content content--reverse section container" data-aos="fade-up" data-aos-duration="1000"
-    data-aos-offset="500">
-    <figure class="content__illustration">
-      <img src="./assets/images/illustrations/message.svg" alt="Web Developer" class="content__image" loading="lazy">
-    </figure>
-    <article class="content__content">
-      <h2 class="content__title">Lorem ipsum dolor sit amet</h2>
-      <p class="content__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium eligendi, porro aut
-        repudiandae dolor, dolore sequi nisi magni eveniet consequatur officiis perferendis aliquam autem fuga.</p>
-    </article>
-  </section>
-
-  <section class="contact container section section--last" id="contact" data-aos="fade-up" data-aos-duration="1000"
-    data-aos-offset="500">
-    <article>
-      <h2 class="contact__title">Contact</h2>
-      <p class="contact__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem beatae, delectus
-        qui recusandae sed, id et natus ratione voluptatibus eaque possimus alias, accusantium excepturi? Libero.</p>
-    </article>
-
-    <form action="#!" class="form">
-      <input type="text" name="name" placeholder="Name" class="form__input" required>
-      <input type="email" name="email" placeholder="Email" class="form__input" required>
-      <textarea name="enquiry" class="form__input form__input--text" placeholder="Enquiry"></textarea>
-      <button class="button" type="submit">Send</button>
-    </form>
-  </section>
-
-
-  <footer class="footer">
-    <section class="footer__layout container">
-      <article>
-        <a href="#top" class="logo"><span class="logo__text logo__text--dark">Louis</span> <span
-            class="logo__text logo__text--light">Young</span></a>
-      </article>
-      <article class="socials">
-        <a href="//github.com/louis-young"><img src="./assets/images/icons/socials/github.svg" alt="Github"
-            class="socials__icon"></a>
-        <a href="//twitter.com/louisryoungg"><img src="./assets/images/icons/socials/twitter.svg" alt="Twitter"
-            class="socials__icon"></a>
-        <a href="//linkedin.com/in/louis-r-young"><img src="./assets/images/icons/socials/linkedin.svg" alt="LinkedIn"
-            class="socials__icon"></a>
-      </article>
-    </section>
-  </footer>
 
   <!-- Scripts start. -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
